# clinical-gateway-poc

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  startup.md
src/app/: config.py  main.py
src/app/models/: messages.py
src/app/routers/: infobip_webhook.py
src/app/services/: channel_registry.py  clinical_backend_client.py  idempotency.py  infobip_sender.py  normalizer.py
src/clinical_gateway_proto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_outbound_relay.py  test_webhook_normalization.py
